kubernetes/app/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: 2048-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: 2048-app

  template:
    metadata:
      labels:
        app: 2048-app

    spec:
      containers:
        - name: 2048-app
          image: 156204501476.dkr.ecr.eu-west-2.amazonaws.com/2048-app:59762aa4eef5ec2e4caf390a5530d6cbe0a25c35

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
