kubernetes/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-2048

spec:
  selector:
    app: 2048-app

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
