kubernetes/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: app-2048
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:156204501476:certificate/cd156ae6-a2d1-46bd-8046-0e1454caf11d
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    external-dns.alpha.kubernetes.io/hostname: 2048.nabilenv.com

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-2048
                port:
                  number: 80
